added The Language Debate

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 </head>
 <body>
     <h1>Technical Blogs:</h1>
-    <p>Authored by: Kshitij aka Chris</p>
+    <p>Authored by: Kshitij</p>
     <div class="container" id="work" >
         <a href="blogs/21july.html">
         <h2>Why writing Technical Blogs:</h2>
             July 13, 2024
+    </div>
+    <div class="container" id="work" >
+        <a href="blogs/27july.html">
+        <h2>The Language Debate: Why Being Language-Agnostic is Crucial for Developers</h2>
+            July 29, 2024
+    </div>
 </body>
 <footer id="contact">
     <ul>
